<?xml version="1.0"?>
<package format="3">
  <name>autoware_carla_interface</name>
  <version>0.51.0</version>
  <description>The carla autoware bridge package</description>
  <maintainer email="mradityagio@gmail.com">Muhammad Raditya GIOVANNI</maintainer>
  <maintainer email="maxime.clement@tier4.jp">Maxime CLEMENT</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>autoware_external_cmd_selector</exec_depend>
  <exec_depend>autoware_twist2accel</exec_depend>
  <exec_depend>autoware_vehicle_velocity_converter</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tier4_vehicle_msgs</depend>

  <!-- C++ dependencies for utility nodes -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
