<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_behavior_path_planner</name>
  <version>0.51.0</version>
  <description>The behavior_path_planner package</description>

  <!-- maintainer -->
  <maintainer email="zulfaqar.azmi@tier4.jp">Zulfaqar Azmi</maintainer>
  <maintainer email="kosuke.takeuchi@tier4.jp">Kosuke Takeuchi</maintainer>
  <maintainer email="kyoichi.sugahara@tier4.jp">Kyoichi Sugahara</maintainer>
  <maintainer email="mamoru.sobue@tier4.jp">Mamoru Sobue</maintainer>
  <maintainer email="alqudah.mohammad@tier4.jp">Alqudah Mohammad</maintainer>
  <maintainer email="yukinari.hisaki.2@tier4.jp">Yukinari Hisaki</maintainer>

  <license>Apache License 2.0</license>

  <author email="takamasa.horibe@tier4.jp">Takamasa Horibe</author>
  <author email="satoshi.ota@tier4.jp">Satoshi Ota</author>
  <author email="fumiya.watanabe@tier4.jp">Fumiya Watanabe</author>
  <author email="zulfaqar.azmi@tier4.jp">Zulfaqar Azmi</author>
  <author email="kosuke.takeuchi@tier4.jp">Kosuke Takeuchi</author>
  <author email="takayuki.murooka@tier4.jp">Takayuki Murooka</author>
  <author email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_behavior_path_planner_common</depend>
  <depend>autoware_freespace_planning_algorithms</depend>
  <depend>autoware_frenet_planner</depend>
  <depend>autoware_internal_debug_msgs</depend>
  <depend>autoware_internal_planning_msgs</depend>
  <depend>autoware_interpolation</depend>
  <depend>autoware_lanelet2_utils</depend>
  <depend>autoware_motion_utils</depend>
  <depend>autoware_object_recognition_utils</depend>
  <depend>autoware_path_sampler</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_planning_factor_interface</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_planning_test_manager</depend>
  <depend>autoware_signal_processing</depend>
  <depend>autoware_utils</depend>
  <depend>autoware_utils_diagnostics</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libboost-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>magic_enum</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tier4_planning_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
